--- a/_posts/2021-08-24-0823-0829.md
+++ b/_posts/2021-08-24-0823-0829.md
@@ -549,6 +549,15 @@ module.exports = {
 * 커스텀 속성을 설정하기 위해서는 jit 모드를 사용해야 한다.
 
 
+## 0828
+# 첫 프로젝트
 
+오늘부터 다음주까지 프로젝트 주간이다.  
+자유 주제에 원하는대로 웹 사이트를 구축하면 되는데, 우리 팀은 카카오 프렌즈샵의 모바일 클론 코딩과 웹을 새롭게 리뉴얼하여 반응형 페이지로 만들기로 했다.  
 
+처음에는 어느정도 큰 변화를 주고자 하였으나, 변화를 줬을 때 기존 회사의 기획 의도와 우리가 리뉴얼하는 이유 모두를 만족시키는 기획을 뽑는 것이 쉽지 않다는 것을 깨닫게 되었다.  
+점심먹고 모여서 밤까지 계속해서 회의를 하고 고민한끝에 겨우 기획 결과물을 내게 되었다.  
+
+다음 주는 우리의 프로젝트 과정을 TIL로 작성하며 녹여내어볼까 한다.  
+모두가 열심히 하는 만큼 좋은 결과가 있었으면 좋겠다.
 
