--- a/_posts/2021-08-24-0823-0829.md
+++ b/_posts/2021-08-24-0823-0829.md
@@ -561,3 +561,240 @@ module.exports = {
 다음 주는 우리의 프로젝트 과정을 TIL로 작성하며 녹여내어볼까 한다.  
 모두가 열심히 하는 만큼 좋은 결과가 있었으면 좋겠다.
 
+
+## 0829
+# 프로젝트 시작
+처음으로 할 일은 기획한 것을 디자인 시안으로 옮기는 일이었다.  
+시안으로 옮기기에 여러명이 달라 붙으면 효율이 나오지 않을 것이라고 판단해 나와 다른 팀원은 성능적으로 어떻게 끌어올릴지 자료를 조사하였고, 다른 두명의 팀원은 시안으로 옮기는 일을 했다.  
+
+<br />
+
+## 그라운드 룰 작성
+### 팀명
+
+**웹으로바꿔조 (권고안)**
+
+김둘이둘
+
+TwoKim-TwoLee (2K2L)
+
+둘둘이조
+
+2(김+이)
+
+니니즈
+
+### 키워드
+
+협동
+
+정신력
+
+데스크탑사용자
+
+가보자고
+
+열쩡열쩡열쩡!
+
+성장
+
+즐겁게 하자
+
+3조가 해내죠?
+
+### 우리의 Ground Rule
+
+밥잘챙겨먹기
+
+상대방 말 끝까지 들어주기
+
+쉬는 시간 꼭 가지기
+
+회의 할 때 의견 적극적으로 내기
+
+다른 사람 의견 잘 들어주기
+
+문제가 생기면 함께 해결하기
+
+주기적으로(하루 3번) 진행상황 공유하기
+
+<br />
+
+## 커밋 컨벤션
+
+### commit 메세지 컨벤션
+
+- `feat` : 새 기능 추가 (mixin 등)
+- `fix` : 버그, 주석 및 기타 수정
+- `style` : CSS등 UI 디자인 변경
+- `refactor` : 리팩토링
+- `env` : 환경 설정 및 수정
+- `docs` : 문서 수정 (ex. README.md)
+- `rename` : 폴더, 파일명 수정 및 이동
+- `remove` : 폴더, 파일 제거
+- `chore` : 빌드 업무 수정, 패키지 매니저 수정.
+
+1. 제목과 본문을 한 줄 띄워 분리하기
+2. 제목은 영문 기준 50자 이내로
+3. 제목 첫글자를 대문자로  (feat: Add unitchange function)
+4. 제목 끝에 `.` 금지
+5. 제목은 `명령조`로
+6. Github - 제목(이나 본문)에 이슈 번호 붙이기
+7. 본문은 영문 기준 72자마다 줄 바꾸기
+8. 본문은 `어떻게`보다 `무엇을`, `왜`에 맞춰 작성하기
+
+<br />
+
+## 클래스 네이밍 컨벤션
+
+### BEM
+BEM 표기법을 기준으로 추후에 상세히 정할 예정
+
+<br />
+
+## 적용 기술 서치
+### 웹 콘텐츠 구성
+
+사용자가 검색하기도 전에 Google은 검색 색인에 웹페이지에 관한 정보를 구성한다.
+
+그렇다면 검색에서 정보를 구성하는 방법은 무엇인가?
+
+웹 크롤러는 사용자가 검색하기 전에 수 천 억개에 달하는 웹페이지에서 정보를 모아 이를 검색 색인에 정리한다.
+
+크롤링 프로세스는 이전의 크롤링 작업을 통해 수집한 웹 주소 목록과 웹사이트 소유자가 제공한 **사이트맵**에서부터 시작된다. 크롤러는 웹사이트를 방문한 다음 사이트에 있는 링크를 사용하여 다른 페이지를 찾는다. 또한 크롤러 소프트웨어는 새로운 사이트, 기존 사이트의 변경사항, 깨진 링크를 주의 깊게 살핀다. 크롤링할 사이트, 크롤링 횟수 및 각 사이트에서 가져올 페이지 수는 컴퓨터 프로그램에서 결정된다.
+
+Google에서 사이트 소유자가 Google에서 사이트를 크롤링하는 방법을 세밀하게 설정할 수 있도록 Search Console을 제공한다. 사이트 소유자는 페이지 크롤링 처리 방식을 상세하게 설정하는 것은 물론 재크롤링을 요청하거나 'robots.txt'라는 파일을 사용하여 페이지가 아예 크롤링되지 않도록 할 수도 있다.
+
+웹은 끊임없이 커지는 도서관과 같다. 수 십 억권에 달하는 책을 보관하고 있지만 중앙집중식 저장 시스템이 갖춰져 있지 않은 상태에 비유할 수 있다. Google은 웹 크롤러라는 소프트웨어를 사용해서 공개된 웹페이지를 발견한다. 사람들이 웹에서 콘텐츠를 탐색할 때와 비슷하게, 크롤러는 웹페이지를 살펴보고 해당 웹페이지에 있는 링크를 따라간다. 이 크롤러는 여러 링크를 넘나들며 이러한 웹페이지에 대한 데이터를 Google 서버로 가져온다.
+
+크롤러가 웹페이지를 찾으면 구글 시스템에서 브라우저와 마찬가지로 해당 페이지의 콘텐츠를 렌더링한다. 이 때 키워드 및 웹사이트 최신 정보에 이르는 주요 신호를 기록하며 검색 색인에서 주요 신호를 추적한다. 웹 페이지 색인이 생성되면 웹페이지에 포함된 모든 단어의 색인 항목에 웹페이지를 추가한다.
+
+**요약**
+1. 웹 크롤러를 이용해 공개된 웹 페이지 검색
+2. 찾은 웹 페이지의 콘텐츠 렌더링 및 색인 생성
+3. 검색어와 색인을 이용해 결과 제공
+
+<br />
+
+## 사이트맵
+
+사이트맵은 사이트에 있는 페이지, 동영상 및 기타 파일과 그 관계에 관한 정보를 제공하는 파일이다. 구글과 같은 검색엔진은 이 파일을 읽고 사이트를 더 효율적으로 크롤링한다. 사이트맵은 내가 사이트에서 중요하다고 생각하는 페이지와 파일을 구글에 알리고 중요한 관련 정보를 제공한다.
+
+ex) 페이지가 마지막으로 업데이트된 시간, 페이지의 대체 언어 버전
+
+→ 사이트 맵은 리치 미디어 콘텐츠가 많은 경우 추가 정보를 제공하면 검색에 적절하게 사용할 수 있다.
+
+### 사이트맵 제작
+
+1. 사용할 사이트맵 형식 결정
+2. 자동 or 수동으로 사이트맵 제작
+3. 사이트맵을 robots.txt에 추가하거나 Search Console에 직접 제출하여 구글에 제공
+
+### 사이트맵 형식
+
+- XML
+- RSS, mRSS, Atom 1.0
+- 텍스트
+
+형식과 관계없이 사이트맵은 1개당 50MB와 URL 50,000개로 제한된다.
+
+→ 더 클 경우 목록을 여러 개의 사이트맵으로 나눠야 한다.
+
+### 사이트맵 제작 웹사이트
+
+[https://www.xml-sitemaps.com/](https://www.xml-sitemaps.com/) 을 이용하여 사이트맵을 만드는 방법
+
+먼저, 웹사이트에 접속 후 사이트맵을 만들고자 하는 웹사이트의 도메인을 입력한다.
+
+다음으로 More options 버튼을 클릭하여 사이트맵에 추가적인 정보를 삽입할 것인지 설정한다.
+
+1. Include “Page Last modification” 은 페이지가 마지막으로 변경된 날짜에 대한 데이터를 사이트맵에 추가하고 싶은가에 대해 설정하는 항목이다. 사이트맵에 이 정보를 입력하면 크롤러가 변경되지 않은 페이지를 재크롤링 하는것을 방지할 수 있다.
+2. Automatically calculate “Page Priority” attribute는 페이지별 중요도를 페이지 뎁스(홈페이지로부터 해당 페이지에 도달하기까지 필요한 클릭 혹은 페이지의 수)에 기반하여 자동으로 설정해주는 기능이다. 이 기능을 활성화하면 따로 페이지별 중요도를 설정하지 않아도 자동으로 산출되어 지정된다.
+3. Pages”Change Frequency” attributes는 웹사이트의 콘텐츠가 얼마나 자주 업데이트되는지에 대한 정보를 사이트맵에 추가할 수 있는 기능이다. 기본 설정으로는 비활성화되어있지만 “항상”부터 “전혀 되지 않음”까지 상황에 맞게 선택할 수 있다.
+
+상황에 맞게 모두 지정하였다면 START 버튼을 눌러 사이트맵 제작을 시작한다. 사이트맵 제작은 짧게는 수 분, 길게는 수십 분이 걸릴 수 있다.
+
+사이트맵 생성이 완료되면 버튼을 눌러 완성된 사이트맵을 다운로드 할 수 있다.
+
+<br />
+
+## robots.txt
+
+robots.txt는 웹사이트에 대한 검색엔진 로봇들의 접근을 조절해주고 제어해주는 역할, 그리고 로봇들에게 웹사이트의 사이트맵이 어디있는지 알려주는 역할을 한다. robots.txt 파일은 사이트의 루트에 위치한다.
+
+robots.txt 파일을 설정하지 않으면 구글, 네이버 등 각종 검색엔진 로봇들이 웹사이트에서 찾을 수 있는 모든 정보를 크롤링하여 검색엔진 검색결과에 노출시킨다. 만약 웹사이트 내 특정 페이지가 검색엔진에 노출되지 않기를 바란다면 robots.txt파일을 설정하여 이를 제어할 수 있다. 
+
+다음은 두 가지 규칙이 포함된 간단한 robots.txt 파일이다.
+
+```
+User-agent: Googlebot
+Disallow: /nogooglebot/
+
+User-agent: *
+Allow: /
+
+Sitemap: http://www.example.com/sitemap.xml
+```
+
+1. 이름이 Googlebot인 사용자 에이전트는 `http://example.com/nogooglebot/`으로 시작하는 URL을 크롤링할 수 없습니다.
+2. 그 외 모든 사용자 에이전트는 전체 사이트를 크롤링할 수 있습니다. 이 부분을 생략해도 결과는 동일합니다. 사용자 에이전트가 전체 사이트를 크롤링할 수 있도록 허용하는 것이 기본 동작입니다.
+3. 사이트의 [사이트맵 파일](https://developers.google.com/search/docs/advanced/sitemaps/overview?hl=ko)은 `http://www.example.com/sitemap.xml`에 있습니다.
+
+### 설정법
+
+robots.txt는 html이 아닌 일반 텍스트 파일로 작성하며 사이트의 루트 디렉토리에 위치해야 한다.
+
+<br />
+
+## 스켈레톤 UI
+
+스켈레톤 컴포넌트는 데이터를 가져오는 동안 콘텐츠를 표시하는 컴포넌트이다.
+
+보통 페이지가 시작할 때 실행하는 ajax 통신 시 결과를 받아오기 전까지 스켈레톤 UI, 스피너 등 로딩 애니메이션을 보여주는데 사용할 수 있을까 하는 의문이 든다...
+
+<br />
+
+## Image Lazy Loading
+
+Image Lazy Loading이란 페이지 안에 있는 실제 이미지들이 실제로 화면에 보여질 필요가 있을 때 로딩을 할 수 있도록 하는 테크닉이다. 웹 페이지 내에서 바로 로딩을 하지 않고 로딩 시점을 뒤로 미루를 것이라 볼 수 있다.
+
+→ 웹 성능과 디바이스 내 리소스 활용도 증가, 연관된 비용을 줄이는데 도움을 줄 수 있다. 
+
+### 장점
+
+1. 성능 향상  
+페이지 초기 로딩 시 필요한 이미지 수를 줄일 수 있다. 리소스 요청을 줄여서, 유저가 사용할 수 있는 제한된 네트워크 대역폭의 경쟁을 줄여서 다른 리소스들을 더 빠르게 처리해서 다운로드하도록 한다.
+2. 비용 감소  
+이미지가 보여지지 않으면 절대 로딩하지 않으므로, 페이지 내에서 전달할 총 바이트 용량을 줄일 수 있다. 특히나 페이지의 제일 상단에만 서비스를 이용하는 유저에게 효과적이다.
+
+### 어떻게 적용할 것인가?
+
+lazy loading의 기본적인 방법은 지금 당장 필요하지 않은 모든 요소들을 잠시 로딩을 지연하는 것이다. 따라서 사용자 화면에 보여지지 않는 이미지들은 로딩을 지연시킬 수 있다.
+
+사용자가 페이지에서 스크롤을 아래로 내림으로써, 이비지의 플레이스홀더는 뷰포트에 다가오게 되고 뷰포트에 보여지게 되면 이미지를 로딩하도록 트리거를 일으킨다.
+
+### img 태그를 이용한 일반적인 방법
+
+Lazy loading 이미지들은 두 단계로 나눌 수 있다.
+
+첫  번째는, 이미지 로딩을 사전에 막는 것이다. 일반적으로 img 태그를 이용해서 이미지를 로드하기 위해 src 속성을 이용한다. html내 이미지가 어디에 존재하든 상관없이, 만약 브라우저가 src 속성을 가지면 이미지를 무조건 로드한다.
+
+이와 같이 이미지들의 로딩을 지연 시키려면 src 속성 대신 다른 사용자 정의 속성에다가 url을 넣는 것이다. 
+
+```html
+<img data-src="[https://ik.imagekit.io/demo/default-image.jpg](https://ik.imagekit.io/demo/default-image.jpg)" />
+```
+
+위 방식으로 이미지 로드를 사전에 막았으니, 이제는 브라우저에게 해당 이미지를 언제 로딩할 것인지 알려주어야 한다. 
+
+<br />
+
+## 출처
+
+(Robots.txt와 Sitemap.xml 알아보기)[https://www.twinword.co.kr/blog/basic-technical-seo/](https://www.twinword.co.kr/blog/basic-technical-seo/)
+
+(사이트맵 제작 방법)[https://www.twinword.co.kr/blog/3-different-ways-to-generate-and-submit-sitemap/](https://www.twinword.co.kr/blog/3-different-ways-to-generate-and-submit-sitemap/)
+
+(구글검색센터)[https://developers.google.com/search/docs/advanced/guidelines/get-started?hl=ko](https://developers.google.com/search/docs/advanced/guidelines/get-started?hl=ko)
+
+(레이지 로딩)[https://helloinyong.tistory.com/297](https://helloinyong.tistory.com/297)
