--- a/_posts/2021-09-07-0906-0912.md
+++ b/_posts/2021-09-07-0906-0912.md
@@ -164,3 +164,615 @@ let과 const는 선언문 이전에 참조하면 에러
 할당문 이전에 참조하면 undefined가 나온다.
 
 메모리란 메인 메모리, RAM을 뜻한다. 프로그램 실행 시 필요한 주소, 정보들을 저장하고 가져다 사용할 수 있게 만드는 공간. 즉, 작업을 위해 사용되는 공간
+
+# 42일 차
+
+# 6장 데이터 타입
+
+데이터 타입은 값의 종류를 말한다. 자바스크립트의 모든 값은 데이터 타입을 갖는다.
+
+- 자바스크립트(ES6)는 7개의 데이터 타입을 제공한다.
+- 원시 타입과 객체 타입으로 분류할 수 있는다.
+  - 원시 타입
+    - 숫자 타입
+    - 문자열 타입
+    - 불리언 타입
+    - undefined 타입
+    - null 타입
+    - 심벌 타입
+  - 객체 타입 (배열, 함수, 객체 등)
+- 확보해야 할 메모리 공간의 크기도 다르고 메모리에 저장되는 2진수도 다르며, 읽어 들여 해석하는 방식도 다른다.
+
+## 숫자 타입
+
+자바스크립트는 하나의 숫자 타입만 존재한다.
+
+- ECMAScript 사양에 따르면 숫자 타입의 값은 배정밀도 64비트 부동소수점 형식을 따른다.
+- 모든 수를 실수로 처리하며, 정수만 표현하기 위한 데이터 타입이 별도로 존재하지 않는다.
+- 정수, 실수, 2진수, 8진수, 16진수 리터럴은 모두 메모리에 배정밀도 64비트 부동소수점 형식의 2진수로 저장된다.
+  - 2진수, 8진수, 16진수를 표현하기 위한 데이터 타입을 제공하지 않기 때문에 값을 참조하면 모두 10진수로 해석된다.
+- 정수로 표시된다 해도 사실은 실수이기 때문에 정수로 표시되는 수끼리 나누더라도 실수가 나올 수 있다.
+
+```javascript
+/ 숫자 타입은 모두 실수로 처리된다.
+console.log(1 === 1.0); // true
+console.log(4 / 2); // 2
+console.log(3 / 2); // 1.5
+```
+
+- 숫자 타입은 세 가지 특별한 값도 표현할 수 있다.
+  - Infinity : 양의 무한대
+  - -Infinity : 음의 무한대
+  - NaN : 산술 연산 불가 (Not a Number)
+    - 대소문자를 구별하기 때문에 주의해야 한다.
+
+## 문자열 타입
+
+텍스트 데이터를 나타내는 데 사용한다.  
+0개 이상의 16비트 유니코드 문자의 집합으로 전 세계 대부분의 문자를 표현할 수 있다.
+
+- 작은 따옴표, 큰 따옴표, 백틱으로 텍스트를 감싼다. 작은따옴표가 가장 일반적
+- 작은 따옴표 내의 큰 따옴표, 큰 따옴표 내의 작은 따옴표는 문자열로 인식된다.
+- 문자열을 따옴표로 감싸는 이유는 키워드나 식별자 같은 토큰과 구분하기 위해서다.
+  - 감싸지 않으면 JS 엔진은 키워드나 식별자 같은 토큰으로 인식한다.
+- 따옴표로 문자열을 감싸지 않으면, 스페이스와 같은 공백 문자도 포함시킬 수 없다.
+- 자바스크립트의 문자열은 원시 타입이며, 변경 불가능한 값이다.
+
+## 템플릿 리터럴
+
+멀티라인 문자열, 표현식 삽입, 태그드 템플릿 등 편리한 문자열 처리 기능을 제공한다.
+
+- 런타임에 일반 문자열로 변환되어 처리된다.
+- 일반적인 따옴표 대신 백틱 `을 사용해 표현한다.
+
+### 멀티라인 문자열
+
+- 일반 문자열 내에서는 줄바꿈이 허용되지 않는다.
+- 일반 문자열 내에서 줄바꿈 등의 공백을 표현하려면 백슬래시로 시작하는 이스케이프 시퀀스를 사용해야 한다.
+- 템플릿 리터럴 내에서는 이스케이프 시퀀스를 사용하지 않고도 줄바꿈이 허용되며, 모든 공백도 있는 그대로 적용된다.
+
+### 표현식 삽입
+
+- 문자열은 문자열 연산자 +를 사용해 연결할 수 있다.
+- - 연산자는 피연산자 중 하나 이상이 문자열인 경우 문자열 연결 연산자로 동작한다. 그 외는 덧셈 연산자로 동작
+- 템플릿 리터럴 내에서는 표현식 삽입을 통해 간단히 문자열을 삽입할 수 있다.
+- 표현식을 삽입하려면 ${}로 표현식을 감싼다.
+  - 표현식의 평가 결과가 문자열이 아니더라도 문자열로 타입이 강제로 변환되어 삽입된다.
+- 표현식 삽입은 반드시 템플릿 리터럴 내에서 사용해야 된다. 일반 문자열에서의 표현식 삽입은 문자열로 취급된다.
+
+### 라인 피드와 캐리지 리턴
+
+개행 문자에는 라인 피드(LF)와 캐리지 리턴(CR)이 있다.  
+라인 피드는 커서를 정지한 상태에서 종이를 한 줄 올리는 것, 캐리지 리턴은 종이를 움직이지 않고 커서를 맨 앞줄로 이동하는 것이다.  
+현대의 운영체제는 서로 다른 체계의 방식을 사용하기 때문에 서로 다른 운영체제에서 작성한 텍스트 파일은 인식하지 못한다.  
+다만 대부분의 텍스트 에디터는 운영체제에 맞게 개행 문자를 자동으로 변환해준다.
+
+## 불리언 타입
+
+불리언 타입의 값은 논리적 참, 거짓을 나타내는 true와 false뿐이다.
+
+## undefined 타입
+
+undefined 타입의 값은 undefined가 유일하다.  
+변수 선언에 의해 확보된 메모리 공간을 처음 할당이 이뤄질 때까지 빈 상태로 내버려두지 않고 JS 엔진이 undefined로 초기화한다.  
+자바스크립트 엔진이 변수를 초기화하는 데 사용하는 undefined를 개발자의 의도적으로 변수에 할당한다면 undefined의 본래 취지와 어긋날뿐더러 혼란을 줄 수 있기 때문에 지양하자.
+-> 대신 null을 할당한다.
+
+### 선언과 정의
+
+undefined의 정의되지 않았다는 뜻은 변수에 값을 할당하여 변수의 실체를 명확히 하지 않았다는 것  
+C에서 선언과 정의는 컴파일러에게 식별자의 존재만 알리는 것은 선언이고, 컴파일러가 변수를 생성해서 식별자와 메모리 주소가 연결되면 정의로 구분한다.
+
+## null 타입
+
+null 타입의 값은 null이 유일하다.
+
+- 프로그래밍 언어에서 null은 변수에 값이 없다는 것을 의도적으로 명시할 때 사용한다.
+- 변수에 null을 할당하는 것은 변수가 이전에 참조하던 값을 더 이상 참조하지 않겠다는 의미다.
+  - 이는 이전에 할당되어 있던 값에 대한 참조를 명시적으로 제거하는 것을 의미
+- 함수가 유효한 값을 반환할 수 없는 경우 명시적으로 null을 반환하기도 한다.
+  - ex) `document.querySelector` 메서드는 조건에 부합하는 HTML 요소를 검색할 수 없는 경우 에러 대신 null을 반환
+
+## 심벌 타입
+
+ES6에서 추가한 7번째 타입으로, 변경 불가능한 원시 타입의 값이다.
+
+- 다른 값과 중복되지 않는 유일무이한 값
+- 주로 이름이 충돌할 위험이 없는 객체의 유일한 프로퍼티 키를 만들기 위해 사용
+- 심벌 이외의 원시 값은 리터럴을 통해 생성하지만 심벌은 Symbol 함수를 호출해 생성한다.
+  - 이때 생성된 심벌 값은 외부에 노출되지 않으며, 다른 값과 절대 중복되지 않는다.
+
+```javascript
+// 심벌 값 생성
+var key = Symbol("key");
+console.log(typeof key); // symbol
+```
+
+## 객체 타입
+
+자바스크립트를 이루고 있는 거의 모든 것이 객체  
+앞의 6가지 데이터 타입 이외의 값은 모두 객체 타입이다.
+
+## 데이터 타입의 필요성
+
+### 데이터 타입에 의한 메모리 공간의 확보와 참조
+
+- 메모리에 값을 저장하려면 먼저 확보해야 할 메모리 공간의 크기를 결정해야 한다.
+  - 자바스크립트 엔진은 데이터 타입에 따라 정해진 크기의 메모리 공간을 확보한다.
+- 값을 참조하려면 한 번에 읽어 들여야 할 메모리 공간의 크기, 즉 메모리 셀의 개수를 알아야 한다.
+  - 자바스크립트 엔진은 데이터 타입에 따라 정해진 크기 단위로 메모리 공간에 저장된 값을 읽어들인다.
+  - 저장된 단위로 읽어 들이지 않으면 값이 훼손된다.
+
+### 데이터 타입에 의한 값의 해석
+
+메모리에 저장된 값은 데이터 타입에 따라 다르게 해석될 수 있다.
+-> 2진수, 즉 비트의 나열로 저장되어 있기 때문에
+
+- 참조 시에 변수에 할당된 값의 타입을 통해 메모리 공간의 주소에서 읽어 들인 2진수를 해석한다.
+
+정리하면 데이터 타입이 필요한 이유는
+
+1. 값을 저장할 때 확보해야 하는 메모리 공간의 크기를 결정하기 위해
+2. 값을 참조할 때 한 번에 읽어 들여야 할 메모리 공간의 크기를 결정하기 위해
+3. 메모리에서 읽어 들인 2진수를 어떻게 해석할지를 결정하기 위해
+
+## 동적 타이핑
+
+### 동적 타입 언어와 정적 타입 언어
+
+#### 정적 타입 언어 특징
+
+- 정적 타입 언어는 데이터 타입을 사전에 선언해야 한다.
+- 변수의 타입을 변경할 수 없으며, 선언한 타입에 맞는 값만 할당할 수 있다.
+- 컴파일 시점에 타입 체크를 수행하여 통과하지 못하면 에러를 발생시키고 프로그램 실행 자체를 막는다.
+
+#### 자바스크립트의 타입
+
+- 자바스크립트의 변수는 선언이 아닌 할당에 의해 타입이 결정된다.
+- 재할당에 의해 변수의 타입은 언제든지 동적으로 변할 수 있다.
+  -> 동적 타이핑
+
+변수는 타입을 가질까?  
+기본적으로 변수는 타입을 갖지 않지만, 값이 타입을 가지기 때문에 현재 변수에 할당되어 있는 값에 의해 변수의 타입이 동적으로 결정된다.
+
+### 동적 타입 언어와 변수
+
+- 변수 값은 언제든지 변경될 수 있기 때문에 복잡한 프로그램에서는 변화하는 변수 값을 추적하기 어려울 수 있다.
+- 값의 변경에 의해 변수의 타입도 언제든지 변경될 수 있기 때문에 동적 타입 언어의 변수는 값을 확인하기 전에 타입을 확신할 수 없다.
+- 자바스크립트 엔진에 의해 암묵적으로 타입이 자동으로 변환되기도 한다.
+  -> 동적 타입 언어는 유연성은 높지만 신뢰성은 떨어진다.
+
+#### 변수를 사용할 때 주의사항
+
+- 변수는 꼭 필요한 경우에 한해 제한적으로 사용한다.
+- 변수의 유효 범위(스코프)는 최대한 좁게 만들어 변수의 부작용을 억제한다.
+- 전역 변수는 최대한 사용하지 않도록 한다.
+- 변수보다는 상수를 사용해 값의 변경을 억제한다.
+- 변수 이름은 변수의 목적이나 의미를 파악할 수 있도록 네이밍한다.
+
+# 7장 연산자
+
+하나 이상의 표현식을 대상으로 산술, 할당, 비교, 논리, 타입, 지수 연산 등을 수행해 하나의 값을 만든다.  
+이때 연산의 대상을 피연산자라 한다. 피연산자는 값으로 평가될 수 있는 표현식이어야 한다.
+
+## 산술 연산자
+
+피연산자를 대상으로 수학적 계산을 수행해 새로운 숫자 값을 만든다.  
+산술 연산이 불가능한 경우, NaN을 반환한다.
+
+### 이항 산술 연산자
+
+- ex) +, -, \*, /, %
+- 2개의 피연산자를 산술 연산하여 숫자 값을 만든다.
+- 모든 이항 산술 연산자는 피연산자의 값을 변경하는 부수 효과가 없다.
+  - 어떤 산술 연산을 해도 피연산자의 값이 바뀌는 경우가 없고 새로운 값을 만든다.
+
+### 단항 산술 연산자
+
+- ex) +, -, ++, --
+- 1개의 피연산자를 산술 연산하여 숫자 값을 만든다.
+- 증가/감소 연산자는 피연산자의 값을 변경하는 부수 효과가 있다.
+  - 증가/감소 연산을 하면 피연산자의 값을 변경하는 암묵적 할당이 이뤄진다.
+- 증가/감소 연산자는 위치에 의미가 있다.
+  - 피연산자 앞에 위치할 경우 피연산자의 값을 변화시킨 후, 다른 연산 수행
+  - 피연산자 뒤에 위치할 경우 다른 연산을 수행한 후, 피연산자의 값을 변화
+- 숫자 타입이 아닌 피연산자에 + 단항 연산자를 사용하면 숫자 타입으로 변환하여 반환한다.
+  - 피연산자를 변경하는 것은 아니고 변환한 값을 생성해서 반환하므로 부수 효과는 없다.
+- - 단항 연산자는 피연산자의 부호를 반전한 값을 반환하는데, + 단항 연산자와 마찬가지로 숫자 타입이 아닌 피연산자에 사용하면 피연산자를 숫자 타입으로 변환하여 반환한다.
+- +나 - 단항 연산자를 숫자로 타입 변환할 수 없는 경우 NaN을 반환한다.
+
+### 문자열 연결 연산자
+
+- - 연산자는 피연산자 중 하나 이상이 문자열인 경우 문자열 연결 연산자로 동작한다.
+
+```javascript
+// 문자열 연결 연산자
+"1" + 2; //  '12'
+1 + "2"; //  '12'
+// 산술 연산자
+1 + 2; //  3
+// true는 1로 타입 변환된다.
+1 + true; //  2
+// false는 0으로 타입 변환된다.
+1 + false; //  1
+// null은 0으로 타입 변환된다.
+1 + null; //  1
+// undefined는 숫자로 타입 변환되지 않는다.
++undefined; //  NaN
+1 + undefined; //  NaN
+```
+
+- JS 엔진에 의해 암묵적으로 타입이 자동 변환되기도 한다.
+- 이를 **암묵적 타입 변환** 또는 **타입 강제 변환**이라고 한다.
+
+## 할당 연산자
+
+- ex) =, +=, -=, \*=, /=, %=
+- 우항에 있는 피연산자의 평가 결과를 좌항에 있는 변수에 할당한다.
+- 좌항의 변수에 값을 할당하므로 변수 값이 변하는 부수 효과가 있다.
+- 할당문은 값으로 평가되는 표현식인 문으로서 할당된 값으로 평가된다.
+
+## 비교 연산자
+
+좌항과 우항의 피연산자를 비교한 다음 그 결과를 불리언 값으로 반환한다.
+
+### 동등/일치 비교 연산자
+
+- ex) ==, ===, !=, !==
+- 동등 비교 연산자는 느슨한 비교를 하지만 일치 비교 연산자는 엄격한 비교를 한다.
+- 동등 비교 연산자는 비교할 때 먼저 암묵적 타입 변환을 통해 타입을 일치시킨 후 같은 값인지 비교한다.
+  - 좌항과 우항의 피연산자가 타입이 다르더라도 암묵적 타입 변환 후에 같은 값일 수 있다면 true를 반환한다.
+  - 예측하기 어려운 결과를 만들어 내기 때문에 사용하지 않는 편이 좋다.
+- 일치 비교 연산자는 좌항과 우항의 피연산자가 타입도 같고 값도 같은 경우에 한하여 true를 반환한다.
+- 다만 NaN은 자신과 일치하지 않는 유일한 값이다. 숫자가 NaN인지 조사하려면 빌트인 함수 `Number.isNaN`을 사용한다.
+- 양의 0과 음의 0을 비교하면 true를 반환한다.
+- `Object.is` 메서드는 예측 가능한 정확한 비교 결과를 반환한다. 그 외에는 일치 비교 연산자와 동일하게 동작
+
+```javascript
+// Number.isNaN 함수는 지정한 값이 NaN인지 확인하고 그 결과를 불리언 값으로 반환한다.
+Number.isNaN(NaN); // true
+Number.isNaN(10); // false
+Number.isNaN(1 + undefined); // true
+
+-0 === +0; // true
+Object.is(-0, +0); // false
+NaN === NaN; // false
+Object.is(NaN, NaN); // true
+```
+
+### 대소 관계 비교 연산자
+
+- ex) >, <, >=, <=
+- 피연산자의 크기를 비교하여 불리언 값을 반환
+
+## 삼항 조건 연산자
+
+`조건식 ? 조건식 true일 때 반환할 값 : 조건식 false일 때 반환할 값`
+
+- 조건식의 평가 결과에 따라 반환할 값을 결정한다. 부수 효과는 없다.
+- ? 앞의 피연산자는 불리언 타입의 값으로 평가될 표현식인대, 평가 결과가 불리언 값이 아니면 불리언 값으로 암묵적 타입 변환된다.
+- 삼항 조건 연산자 표현식은 값으로 평가할 수 있는 표현식인 문이다.
+- 반면, `if else` 문은 값처럼 사용할 수 없다.
+
+## 논리 연산자
+
+- ex) ||, &&, !
+- 우항과 좌항의 피연산자(부정 논리 연산자의 경우 우항의 피연산자)를 논리 연산한다.
+- 논리 부정 연산자는 언제나 불리언 값을 반환한다.
+- 피연산자가 반드시 불리언 값일 필요는 없다. 불리언 값이 아니면 불리언 타입으로 암묵적 타입 변환된다.
+- 논리합, 논리곱 연산자 표현식의 평가 결과는 불리언 값이 아닐 수도 있다.
+  - 언제나 2개의 피연산자 중 어느 한쪽으로 평가된다.
+
+## 쉼표 연산자
+
+왼쪽 피연산자부터 차례대로 피연산자를 평가하고 마지막 피연산자의 평가가 끝나면 마지막 피연산자의 평가 결과를 반환한다.
+
+```javascript
+var a, b, c;
+(a = 1), (b = 2), (c = 3); // 3
+```
+
+## 그룹 연산자
+
+소괄호로 피연산자를 감싸는 그룹 연산자는 자신의 피연산자인 표현식을 가장 먼저 평가한다.  
+그룹 연산자를 사용하여 우선순위를 조절할 수 있다.
+
+```javascript
+10 * 2 + 3; // 23
+// 그룹 연산자를 사용하여 우선순위를 조절
+10 * (2 + 3); // 50
+```
+
+## typeof 연산자
+
+- typeof 연산자는 피연산자의 데이터 타입을 문자열로 반환한다.
+- 7가지 문자열 "string", "number", "boolean", "undefined", "symbol", "object", "function" 중 하나를 반환한다.
+- "null"을 반환하는 경우는 없으며 함수는 "function"을 반환한다. 이처럼 typeof 연산자가 반환하는 문자열은 7개의 데이터 타입과 정확히 일치하지는 않는다.
+- null 값을 연산해보면 "object"를 반환한다. 자바스크립트의 첫 번째 버전의 버그다.
+- typeof 연산자로 선언하지 않은 식별자를 연산해보면 ReferenceError가 발생하지 않고, undefined를 반환한다.
+
+## 지수 연산자
+
+- 좌항의 피연산자를 밑으로, 우항의 피연산자를 지수로 거듭 제곱하여 숫자 값을 반환한다.
+- 지수 연산자는 ES7에 도입되었는데, 이전에는 Math.pow 메서드를 사용했다.
+- 음수의 거듭제곱을 밑으로 사용해 계산하려면 괄호로 묶어야 한다.
+- 지수 연산자도 다른 산술 연산자와 마찬가지로 할당 연산자와 함께 사용할 수 있다.
+
+```javascript
+2 ** 3; // 8
+
+var x = 5;
+x **= 2; // 25
+```
+
+## 연산자의 부수 효과
+
+- 대부분의 연산자는 다른 코드에 영향을 주지 않지만, 일부 연산자는 다른 코드에 영향을 주는 부수 효과가 있다.
+- ex) 할당 연산자, 증감 연산자, delete 연산자
+
+## 연산자 우선 순위
+
+여러 개의 연산자로 이뤄진 문이 실행될 때 연산자가 실행되는 순서. 우선순위가 높을수록 먼저 실행된다.
+
+## 연산자 결합 순서
+
+연산자의 어느쪽부터 평가를 수행할 것인지를 나타내는 순서를 말한다.
+
+# 8장 제어문
+
+조건에 따라 코드 블록을 실행하거나 반복 실행할 때 사용한다.  
+일반적으로 코드는 위에서 아래 방향으로 순차적으로 실행되지만 제어문을 사용하면 코드의 실행 흐름을 인위적으로 제어할 수 있다.  
+때문에 직관적인 코드의 흐름을 혼란스럽게 만들어서 가독성을 해치는 단점이 있다.
+
+## 블록문
+
+0개 이상의 문을 중괄호를 묶은 것으로, 코드 블록 또는 블록이라고 부르기도 한다.  
+자바스크립트는 블록문을 하나의 실행 단위로 취급한다.  
+블록문은 언제나 문의 종료를 의미하는 자체 종결성을 갖기 때문에 불록문의 끝에는 세미콜론을 붙이지 않는다.
+
+## 조건문
+
+주어진 조건식의 평가 결과에 따라 코드 블록의 실행을 결정한다.  
+조건식은 불리언 값으로 평가될 수 있는 표현식이다.
+
+### if... else 문
+
+if 문의 조건식이 불리언 값이 아닌 값으로 평가되면 JS 엔진에 의해 암묵적으로 불리언 값으로 강제 변환된다.
+
+### switch 문
+
+- 주어진 표현식을 평가하여 그 값과 일치하는 표현식을 갖는 case 문으로 실행 흐름을 옮긴다.
+- case 문은 상황을 의미하는 표현식을 지정하고 콜론으로 마친다. 그리고 그 뒤에 실행할 문들을 위치시킨다.
+- switch 문의 표현식과 일치하는 case 문이 없다면 실행 순서는 default 문으로 이동한다. (선택사항)
+- case문으로 실행 흐름이 이동하여 문을 실행하고 break로 switch문을 탈출하지 않으면 switch문이 끝날 때까지 이후 모든 문을 실행한다. 이를 **폴스루**라 한다.
+- 조건이 너무 많아서 switch문을 사용했을 때 가독성이 더 좋은 경우 사용하자
+
+## 반복문
+
+- 조건식의 평가 결과가 참인 경우 코드 블록을 실행한다.
+- 그 후 조건식을 다시 평가하여 여전히 참인 경우 코드 블록을 다시 실행한다. (조건식이 거짓일 때까지 반복)
+
+### for 문
+
+- for 문의 변수 선언문, 조건식, 증감식은 모두 옵션이므로 반드시 사용할 필요는 없다.
+- 단, 어떤 식도 선언하지 않으면 무한루프가 된다.
+
+```javascript
+for (;;) { ... }
+```
+
+### while 문
+
+- while 문은 주어진 조건식의 평가 결과가 참이면 코드 블록을 계속해서 반복 실행한다.
+- for 문은 반복 횟수가 명확할 때 주로 사용하고, while 문은 반복 횟수가 명확하지 않을 때 주로 사용한다.
+- 조건식의 결과가 불리언 값이 아니면 불리언 값으로 강제 변환하여 논리적 참, 거짓을 구별한다.
+
+## break 문
+
+- 레이블 문, 반복문, switch 문의 코드 블록을 탈출한다.
+- 이외에 break 문을 사용하면 문법 에러가 발생한다.
+- 레이블 문은 식별자가 붙은 문을 말한다.
+
+```javascript
+foo: console.log("foo");
+```
+
+- 레이블 문은 프로그램 실행 순서를 제어하는 데 사용한다.
+- switch 문의 case 문과 default 문도 레이블 문이다.
+- 레이블 문을 탈출하려면 break 문에 레이블 식별자를 지정한다.
+- 레이블 문을 사용하면 프로그램의 흐름이 복잡해져서 가독성이 나빠지고 오류를 발생시킬 가능성이 높아지기 때문에 중첩된 for문 정도에서만 사용한다.
+
+## continue 문
+
+- 반복문의 코드 블록 실행을 현 지점에서 중단하고 반복문의 증감식으로 실행 흐름을 이동시킨다.
+- if문 내에서 실행되어야 할 코드가 길다면 continue를 사용하면 코드 depth를 한 단계 낮출 수 있다. (코딩스킬)
+
+# 9장 타입 변환과 단축 평가
+
+## 타입 변환이란?
+
+개발자가 의도적으로 값의 타입을 변환하는 것을 **명시적 타입 변환** 또는 **타입 캐스팅**이라 한다.  
+개발자의 의도와 상관없이 표현식을 평가하는 도중에 JS 엔진에 의해 암묵적으로 타입이 자동 변환되는 것을 **암묵적 타입 변환**또는 **강제 타입 변환**이라 한다.
+
+- 명시적 타입 변환이나 암묵적 타입 변환이 기존 원시 값을 직접 변경하는 것은 아님
+  - 원시 값은 변경 불가능한 값
+- 타입 변환이란 기존 원시 값을 사용해 다른 타입의 새로운 원시 값을 생성하는 것이다.
+
+## 암묵적 타입 변환
+
+JS 엔진은 표현식을 평가할 때 개발자의 의도와는 상관없이 코드의 문맥을 고려해 암묵적으로 데이터 타입을 강제 변환할 때가 있다.  
+암묵적 타입 변환이 발생하면 문자열, 숫자, 불리언과 같은 원시 타입 중 하나로 타입을 자동 변환한다.
+
+### 문자열 타입으로 변환
+
+```javascript
+1 + "2"; // '12'
+```
+
+- 피연산자 중 하나 이상이 문자열이므로 문자열 연결 연산자로 동작한다.
+- 문자열 연결 연산자의 모든 피연산자는 문맥상 모두 문자열 타입이어야 한다.
+  - 따라서 문자열이 아닌 피연산자를 문자열로 암묵적 타입 변환한다.
+- 연산자 표현식의 피연산자만이 암묵적으로 타입 변환되는 것은 아니고, 예를 들어 템플릿 리터럴에서 표현식 삽입은 평가 결과를 문자열 타입으로 암묵적 타입 변환한다.
+
+### 숫자 타입으로 변환
+
+```javascript
+1 - "1"; // 0
+1 * "10"; // 10
+1 / "one"; // NaN
+```
+
+- 모두 산술 연산자이므로 모든 피연산자는 코드 문맥상 모두 숫자 타입이어야 한다.
+- JS 엔진은 산술 연산자 표현식을 평가하기 위해 산술 연산자의 피연산자 중에 숫자 타입이 아닌 피연산자를 숫자 타입으로 암묵적 타입 변환한다.
+- 피연산자를 숫자 타입으로 변환할 수 없는 경우는 산술 연산을 수행할 수 없으므로 NaN이 표현식의 평가 결과가 된다.
+
+```javascript
+"1" > 0; // true
+```
+
+- 비교 연산자는 피연산자의 크기를 비교하므로 모든 피연산자의 코드는 문맥상 숫자 타입이어야 한다.
+  - 암묵적 타입 변환 발생
+- - 단항 연산자는 피연산자가 숫자 타입의 값이 아니면 숫자 타입의 값으로 암묵적 타입 변환을 수행한다.
+- 빈 문자열 ,빈 배열, null, false는 0으로, true는 1로 변환된다.
+- 객체와 빈 배열이 아닌 배열, undefined는 변환되지 않아 NaN이 된다.
+
+### 불리언 타입으로 변환
+
+- if문이나 for 문과 같은 제어문 또는 삼항 조건 연산자의 조건식은 불리언 값으로 평가되어야 하는 표현식이다.
+- JS 엔진은 조건식의 평가 결과를 불리언 타입으로 암묵적 타입 변환한다.
+- JS 엔진은 불리언 타입이 아닌 값을 Truthy 값 (참으로 평가되는 값) 또는 Falsy 값(거짓으로 평가되는 값)으로 구분한다.
+- Falsy 값 이외의 모든 값은 모두 true로 평가되는 Truthy 값이다.
+
+**Falsy 값**
+
+- false
+- 0, -0
+- ''
+- undefined
+- null
+- NaN
+
+## 명시적 타입 변환
+
+개발자의 의도에 따라 명시적으로 타입을 변경하는 방법은 다양하다.
+
+- 표준 빌트인 생성자 함수(String, Boolean, Number)를 new 연산자 없이 호출하는 방법
+- 빌트인 메서드를 사용하는 방법
+- 암묵적 타입 변환을 이용하는 방법
+
+- 표준 빌트인 생성자 함수와 표준 빌트인 메서드는 JS에서 기본 제공하는 함수다.
+- 표준 빌트인 생성자 함수는 객체를 생성하기 위한 함수이며 new 연산자와 함께 호출한다.
+- 표준 빌트인 메서드는 자바스크립트에서 기본 제공하는 빌트인 객체의 메서드다.
+
+### 문자열 타입으로 변환
+
+1. String 생성자 함수를 new 없이 호출하는 방법
+2. Object,prototype.toString 메서드를 사용하는 방법
+3. 문자열 연결 연산자를 이용하는 방법
+
+### 숫자 타입으로 변환
+
+1. Number 생성자 함수를 new 연산자 없이 호출하는 방법
+2. parseInt, parseFloat 함수를 사용하는 방법(문자열만 숫자 타입으로 변환 가능)
+3. - 단항 산술 연산자를 이용하는 방법
+4. - 산술 연산자를 이용하는 방법
+
+### 불리언 타입으로 변환
+
+1. Boolean 생성자 함수를 new 연산자 없이 호출하는 방법
+2. ! 부정 논리 연산자를 두 번 사용하는 방법
+
+## 단축 평가
+
+### 논리 연산자를 사용한 단축 평가
+
+논리합 또는 논리곱 연산자 표현식의 평가 결과는 불리언 값이 아닐 수도 있다. 논리합 또는 논리곱 연산자 표현식은 언제나 2개의 피연산자 중 어느 한쪽으로 평가된다.
+
+```javascript
+"Cat" && "Dog"; // "Dog"
+```
+
+- 논리곱(`&&`) 연산자는 두 개의 피연산자가 모두 true로 평가될 때 true를 반환
+- 첫 번째 피연산자는 Truthy한 값이므로 true로 평가된다.
+- 두 번째 피연산자까지 평가해 보아야 위 표현식을 평가할 수 있다.
+  - 즉 두 번째 피연산자가 논리곱 연산자 표현식의 평가 결과를 결정한다.
+- 논리합(`||`) 연산자는 두 개의 피연산자 중 하나만 true로 평가되어도 true를 반환한다.
+  - 첫 번째 피연산자가 Truthy한 값이므로, 논리 연산의 결과를 결정한 첫 번째 피연산자를 반환한다.
+
+### 단축 평가 규칙
+
+`true || anything` : true 반환  
+`false || anything` : anything 반환  
+`true && anything` : anything 반환  
+`false && anything` : false 반환
+
+### 단축 평가 활용
+
+- 어떤 조건이 Truthy 값일 때 무언가를 해야 한다면 논리곱(`&&`) 연산자 표현식으로 대체할 수 있다.
+- 어떤 조건이 Falsy 값일 때 무언가를 해야 한다면 논리합(`||`) 연산자 표현식으로 대체할 수 있다.
+
+```javascript
+var done = true;
+var message = "";
+
+if (done) message = "완료";
+
+message = done && "완료";
+```
+
+#### 객체를 가리키기를 기대하는 변수가 null 또는 undefined가 아닌지 확인하고 프로퍼티를 참조할 때
+
+객체를 가리키기를 기대하는 변수의 값이 객체가 아니라 null 또는 undefined인 경우 객체의 프로퍼티를 참조하면 타입 에러가 발생한다.
+
+```javascript
+var elem = null;
+
+val value = elem && elem.value;
+```
+
+#### 함수 매개변수에 기본값을 설정할 때
+
+함수를 호출할 때 인수를 전달하지 않으면 매개변수에는 undefined가 할당된다. 이때 단축 평가를 사용해 매개변수의 기본값을 설정하면 undefined로 인해 발생할 수 있는 에러를 방지할 수 있다.
+
+```javascript
+function getStringLength(str) {
+  str = str || "";
+  return str.length;
+}
+```
+
+- 매개변수를 넘기지 않더라도 기본값이 설정된다.
+
+### 옵셔널 체이닝 연산자
+
+ES11에서 도입한 옵셔널 체이닝 연산자 `?.`는 좌항의 피연산자가 null 또는 undefined인 경우 undefined를 변환하고, 그렇지 않으면 우항의 프로퍼티 참조를 이어간다.
+
+```javascript
+var elem = null;
+
+var value = elem?.value;
+console.log(value); // undefined
+```
+
+- 옵셔널 체이닝 연산자 도입 이전에는 논리곱 연산자를 사용한 단축 평가를 통해 변수가 null 또는 undefined인지 확인했다.
+- 논리 연산자 &&은 좌항 피연산자가 false로 평가되는 값이면 좌항 피연산자를 그대로 반환한다.
+  - 하지만 0이나 ''은 객체로 평가될 때도 있다.
+- 하지만 옵셔널 체이닝 연산자 ?.는 좌항 피연산자가 Falsy 값이라도 null 또는 undefined가 아니면 우항의 프로퍼티 참조를 이어간다.
+
+### null 병합 연산자
+
+ES11에서 도입된 null 병합 연산자 ??는 좌항의 피연산자가 null 또는 undefined인 경우 우항의 피연산자를 반환하고, 그렇지 않으면 좌항의 피연산자를 반환한다.
+
+```javascript
+var foo = null ?? "default string";
+console.log(foo); // "default string"
+```
+
+- null 병합 연산자 ??는 변수에 기본값을 설정할 때 유용하다.
+- null 병합 연산자 도입 이전에는 논리 연산자 `||`를 사용한 단축 평가를 통해 변수에 기본값을 설정했다.
+- 옵셔널 체이닝과 때와 마찬가지로 단축 평가의 경우 좌항의 피연산자가 Falsy 값인 0이나 ''도 기본값으로서 유효하다면 예기치 않은 동작이 발생할 수 있다.
+- 하지만 null 병합 연산자는 좌항의 피연산자가 Falsy 값이라도 null 또는 undefined가 아니면 좌항의 피연산자를 그대로 반환한다.
+
+### 출처
+
+모던 자바스크립트 Deep Dive
