--- a/_posts/2021-09-07-0906-0912.md
+++ b/_posts/2021-09-07-0906-0912.md
@@ -165,6 +165,8 @@ let과 const는 선언문 이전에 참조하면 에러
 
 메모리란 메인 메모리, RAM을 뜻한다. 프로그램 실행 시 필요한 주소, 정보들을 저장하고 가져다 사용할 수 있게 만드는 공간. 즉, 작업을 위해 사용되는 공간
 
+## 0907
+
 # 42일 차
 
 # 6장 데이터 타입
@@ -456,7 +458,7 @@ Object.is(NaN, NaN); // true
 
 ## 논리 연산자
 
-- ex) ||, &&, !
+- ex) `||`, &&, !
 - 우항과 좌항의 피연산자(부정 논리 연산자의 경우 우항의 피연산자)를 논리 연산한다.
 - 논리 부정 연산자는 언제나 불리언 값을 반환한다.
 - 피연산자가 반드시 불리언 값일 필요는 없다. 불리언 값이 아니면 불리언 타입으로 암묵적 타입 변환된다.
@@ -776,3 +778,99 @@ console.log(foo); // "default string"
 ### 출처
 
 모던 자바스크립트 Deep Dive
+
+## 0908 TIL
+
+# 43일 차
+
+## 1교시
+
+모던한 인터프리터들은 컴파일러를 내장하고 있다.
+하지만 인터프리터는 실행 파일을 생성하지 않기 때문에 컴파일러와 다르다.
+
+## 2교시
+
+처음에 vscode에 1을 쓰면 그것은 리터럴이다.
+실행시키면 평가되어 값이 된다.
+
+a.js를 실행시키면 자바스크립트 엔진이 텍스트를 읽어들인다.  
+그리고 리터럴을 파싱한다.
+
+리터럴 1은 (실제 값이 아닌 표기법) 평가되어 실제 숫자 값 1이 된다.
+표현식인 문을 평가하는 것
+
+다른 언어와 다르게 프로그래밍 언어는 문법 지식을 모르면 명령 자체를 할 수없다.  
+더해서 문법을 필요할 때 꺼내써야 할 줄 알아야 한다. (코딩 스킬)
+전제는 문법이 머리속에 있어야 한다는 것
+
+컴퓨터 사이언스에서 부수 효과는 좋지 않은 것이다. 부수 효과를 억제해야 한다.
+
+## 3교시
+
+`console.log()` 는 표준 ECMAScript에 써있지 않다.
+그런데 node.js, 브라우저 모두에서 동작한다.
+즉, node.js에서 출력하는 `console.log()`와 브라우저에서 출력하는 `console.log()`가 다를 경우가 있다.
+
+자바스크립트는 숫자형 타입을 8바이트로 고정해서 사용한다.
+또한 문자열을 배열이나 객체가 아닌 원시타입으로 문자열을 사용할 수 있도록 해준다.
+자바스크립트의 어려운 점은 그 문자열에 .(참조연산자)을 찍으면 암묵적으로 객체로 만들어준다.
+
+백틱은 개행을 해야할 때, 표현식을 삽입해야할 때만 사용한다.
+
+- 일관성 측면
+- 파서의 추가 동작으로 인한 미세한 성능 차이
+
+식별자 선언과 동시에 초기화를 해주는 습관을 들여야 한다.
+
+**의도적 부재**
+변수에 값이 없다는 것을 의도적으로 명시
+
+일반적인 변수, 함수명은 카멜케이스
+클래스나 생성자는 파스칼 케이스
+자바스크립트 빌트인 함수가 위의 케이스를 따르기 때문에 컨벤션을 따른다.
+
+자바스크립트는 객체 프로퍼티의 키가 중복되는 것을 허용한다.
+이 때 키가 지워지는 것을 방지하기 위해 심볼 값을 주면 다른 프로퍼티를 덮어쓰지 않는다.
+
+식별자는 사실 메모리 주소 + 최신에 들어온 값의 데이터 타입 정보도 관리해야한다.
+
+동적타이핑?
+다른 타입을 할당할 수 있는 것
+유연하지만 안정성이 떨어진다.
+
+재할당을 최대한 지양하라
+어떻게 지양하는가? 새로 변수를 만들어라
+새로 변수를 많이 만들면 안좋다고 하지 않았느냐?
+변수를 얼른 소멸시켜라. -> 스코프를 최대한 좁게
+
+const -> 재할당이 금지된 변수
+그래서 웬만하면 변수를 생성할 때 const로 생성하는 것이다.
+라이브러리, 프레임워크 -> 왜쓰는지 알고 써라
+
+변수이름은 명사, 함수이름은 동사가 기본
+
+a++, a-- 증감 연산자는 안티패턴
+일단 앞에 연산자를 붙였을 때랑, 뒤에 붙였을 때 동작이 다르다.
+그리고 부수 효과가 발생한다.
+-> `a = a + 1;`로 바꿔쓰자
+
+delete도 안티패턴
+프로퍼티를 지울 이유가 없다.
+애초에 생성하지 않으면 될 것
+
+쉼표 연산자도 안티패턴
+
+함수 호출로 해도 되고 연산자로 해도 되는 것이 있으면 연산자로 해야 한다.
+-> 함수 호출은 인수로 어떤 값을 줄 지 알아야 하고 순서도 알아야 한다.
+
+`a = 1;`
+
+1. a라는 식별자가 존재하는지 찾아야 한다.
+2. 값을 메모리에 저장하고, a로 그 선두 주소를 가리킨다.
+   
+
+## 알고리즘
+
+### sort()
+
+- a, b로 연산한 반환값이 0보다 작으면 a를 먼저, 0보다 크면 b를 먼저 정렬한다.
