--- a/_posts/2021-09-07-0906-0912.md
+++ b/_posts/2021-09-07-0906-0912.md
@@ -874,3 +874,31 @@ delete도 안티패턴
 ### sort()
 
 - a, b로 연산한 반환값이 0보다 작으면 a를 먼저, 0보다 크면 b를 먼저 정렬한다.
+
+## 0909 TIL
+
+# 44일 차
+
+## 마음가짐 다잡기, 되돌아보기
+
+하루가 찝찝한 이유
+-> 효율적으로 시간을 쓰지 못하고 마음만 급하다
+
+1. 잠을 적게 자는 것이 과연 하루를 효율적으로 보내는데 좋을까? -> 6시간은 자자
+2. 깨어있는 동안 나는 하루를 알차게 보내나? -> 시간을 분할해서 사용하자
+3. 어떻게 분할할 것인가? -> 시간별 목표를 정해서 목표를 달성하자.
+
+현 시점에서 중요한 요소는 자바스크립트와 알고리즘
+알고리즘을 위해 평일에 3시간, 주말에 7시간 30분씩 시간을 투자하자
+
+자바스크립트 학습 중에서 현재 문제점은 첫 번째 예습에 너무 오랜 시간이 걸린다는 것이다.
+
+1. 집중력의 문제
+2. 첫 예습의 속도를 단축하고, 복습 위주의 학습을 하자.
+
+- 러버덕 시간에 조금 더 집중하자
+- 대중 교통으로 이동하는 시간에는 알고리즘 문제 어설프게 풀지 말고, 무조건 복습 -> 효율이 좋다.
+- 오후 자습 시간에는 무조건 자바스크립트 예습. 남이 뭐하든 신경 끄기
+- 잡담할 시간에 공부해라. 집중력 흐트러진다.
+- 자기 전 or 일찍 일어나 1시간 30분 알고리즘 학습
+- 저녁 자습 때 알고리즘 1시간 30분 활용할 것
