--- a/_posts/2021-09-07-0906-0912.md
+++ b/_posts/2021-09-07-0906-0912.md
@@ -902,3 +902,109 @@ delete도 안티패턴
 - 잡담할 시간에 공부해라. 집중력 흐트러진다.
 - 자기 전 or 일찍 일어나 1시간 30분 알고리즘 학습
 - 저녁 자습 때 알고리즘 1시간 30분 활용할 것
+
+## 0910 TIL
+
+# 45일차
+
+## 1교시
+
+리턴문은 맨 마지막에 위치해야 한다.
+
+가비지 컬렉터는 제품이 아니다. 쓰레기를 수집하러 다니는 프로그램이 가비지 컬렉터  
+가비지 컬렉터가 메모리를 언제 해제하는지 주기를 알 수 없는 이유는 사람들마다 효율적이라고 생각하는 방식이 다르기 때문이다.  
+실행컨텍스트 객체에 저장된 함수 스코프 단위로 지워준다.
+
+## 2교시
+
+초창기 프로그래밍은 다 절차형, 명령형  
+명령형은 어떤 값을 만들어내는 절차를 나열한 것이다.
+
+함수를 쪼개야 테스트하기가 좋은데, 함수가 하나의 일만 하고 작아야 하고, 순수 함수여야 한다.  
+그리고 함수명을 짓기가 힘들다면 쪼개야 한다.
+
+```javascript
+function sumEven(numbers) {}
+```
+
+eslint에서 빨간 줄 링크를 타고 들어가면 eslint 페이지로 가게 되는데, 그것을 읽어보는 것이 큰 도움이 된다.
+
+- 함수명과 매개변수명은 명확하게
+- 제어문을 쓰다보면 아이러니하게 변수를 더 많이 쓰게 되는 상황이 발생한다.
+- 그리고 문들의 흐름을 인위적으로 조작하여 가독성을 해친다.
+
+- 이러한 절차형 언어의 단점을 해결한 것이 선언형인 리액트
+- 선언형이라는 것 안에 함수형이 들어가있다.
+- 선언형은 절차가 숨겨져있고, 결국 뭘 하고 싶은지를 영어 쓰듯이 한다.
+- 자바스크립트는 객체 지향보다는 함수형으로 작성하는 것이 아름답다.
+- reduce, map, filter는 함수형 언어에서 꼭 나온다.
+
+```javascript
+function sumEven(numbers) {
+  return numbers.reduce((acc, cur) => (cur % 2 === 0 ? acc + cur : acc), 0);
+}
+```
+
+- 이렇게 쓰면 한 줄에 해결할 수 있다.
+- 내부적으로는 for문이 돌아간다.
+- 이러한 로직이 내부에는 감춰지는 것 -> 선언형
+
+## 3교시
+
+- var 키워드는 함수에서 선언해도 전역으로 참조 가능하다.
+- 레이블 문은 사용 가능하긴 하지만 보통 함수에서 실행하기 때문에 return을 사용하면 된다.
+
+- 타입 변환에서 중요한 것은 문맥이 있다는 것
+
+- String() 생성자 함수는 시맨틱에 어긋난다.
+- 스트링은 + '', 숫자형은 + 단항 연산자, 불리언은 !!
+
+- 삼항 연산자는 if else 문을 대체
+- if 문을 대체하는 것은 && 와 ||
+
+```javascript
+// 단축 평가를 사용한 매개변수의 기본값 설정
+function getStringLength(str) {
+  str = str || "";
+  return str.length;
+}
+getStringLength(); // 0
+getStringLength("hi"); // 2
+// ES6의 매개변수의 기본값 설정
+function getStringLength(str = "") {
+  return str.length;
+}
+getStringLength(); // 0
+getStringLength("hi"); // 2
+```
+
+과연 사용자가 잘못된 인수로 호출했을 때 기본값을 빈 문자열로 해주는 것이 옳은 것인가?  
+-> 에러를 발생시켜야 한다.
+
+## 4교시
+
+하나의 값을 저장하는 방식이 변수  
+여러개의 값을 저장하는 것이 자료구조 ex) 배열  
+배열은 인덱스를 가지고 있다.  
+배열은 값에 접근하기 위해 인덱스를 사용하고, 객체는 값에 접근하기 위해 키를 사용한다.  
+배열은 순서가 있고, 객체는 순서가 없다는게 가장 큰 차이점  
+그리고 객체는 행위(메서드)를 포함시킬 수 있다.  
+for문에 딱 맞는 자료구조가 배열
+
+유사배열  
+함수로 배열을 받아서 쓰면 되는데 왜 메서드를 포함 시켜서 사용하느냐?  
+-> 강사님의 주관  
+자바스크립트는 객체 지향 보다는 함수가 낫다.  
+왜? -> 앞으로 차차 많은 이야기를 나누게 될 것
+
+객체지향의 단점은 설계에 맞춰서 개발을 진행하는데 요구사항이 변했을 때 빠르게 대응하기가 힘들다는 것이다.
+
+## 5교시
+
+프로퍼티 키는 사실 문자열 또는 심볼이다.  
+프로퍼티 값으로 함수가 와도 사실 메서드가 아니다 -> 나중에 설명할 것
+
+순수함수는 테스트하기가 쉽다.  
+객체지향의 메서드들은 대부분 비순수함수다.
+
+키워드는 명령어. 예약어는 내부적으로 사용하는 것
