--- a/_posts/2021-09-07-0906-0912.md
+++ b/_posts/2021-09-07-0906-0912.md
@@ -1008,3 +1008,111 @@ for문에 딱 맞는 자료구조가 배열
 객체지향의 메서드들은 대부분 비순수함수다.
 
 키워드는 명령어. 예약어는 내부적으로 사용하는 것
+
+## 0911
+
+# 13장 스코프
+
+## 스코프란?
+
+변수는 자신이 선언된 위치에 의해 자신이 유효한 범위, 즉 다른 코드가 변수 자신을 참조할 수 있는 범위가 결정된다.  
+모든 식별자는 자신이 선언된 위치에 의해 다른 코드가 식별자 자신을 참조할 수 있는 유효 범위가 결정된다.  
+이를 **스코프**라고 한다. 즉, **스코프는 식별자가 유효한 범위**를 말한다.
+
+코드의 가장 바깥 영역과 함수 내부에 같은 이름을 갖는 x 변수를 선언했다고 가정해보자
+
+- JS엔진은 이름이 같은 두 개의 변수 중에서 어떤 변수를 참조해야 할 것인지를 결정해야 하는데, 이를 **식별자 결정**이라고 한다.
+- 스코프를 통해 이를 결정하기 때문에 스코프는 엔진이 식별자를 검색할 때 사용하는 규칙이라고도 할 수 있다.
+- JS 엔진은 코드를 실행할 때 코드의 문맥을 고려한다. 코드가 어디서 실행되며 주변에 어떤 코드가 있는지에 따라 다른 결과를 만들어 낸다.
+  - "코드가 어디서 실행되며 주변에 어떤 코드가 있는지"를 렉시컬 환경이라고 부른다.
+  - 코드의 문맥은 렉시컬 환경으로 이뤄지고 이를 구현한 것이 실행 컨텍스트이며, 모든 코드는 실행 컨텍스트에서 평가되고 실행되고 평가된다.
+- 스코프를 통해 식별자인 변수 이름의 충돌을 방지하여 같은 이름의 변수를 사용할 수 있게 한다.
+- 스코프 내에서 식별자는 유일해야 하지만 다른 스코프에는 같은 이름의 식별자를 사용할 수 있다. 즉, 스코프는 네임스페이스이다.
+
+### var 키워드로 선언한 변수의 중복 선언
+
+```javascript
+function foo() {
+  var x = 1;
+  // var 키워드로 선언된 변수는 같은 스코프 내에서 중복 선언을 허용한다.
+  // 아래 변수 선언문은 자바스크립트 엔진에 의해 var 키워드가 없는 것처럼 동작한다.
+  var x = 2;
+  console.log(x); // 2
+}
+foo();
+```
+
+- var 키워드로 선언된 변수는 같은 스코프 내에서 중복 선언이 허용된다. 이는 의도치 않게 변수값이 재할당되어 변경되는 부작용을 발생시킨다.
+
+## 스코프의 종류
+
+코드는 전역과 지역으로 구분할 수 있다. 전역은 **코드의 가장 바깥 영역**을 말하고, 지역은 **함수 몸체 내부**를 말한다.
+
+- 전역은 전역 스코프를 만들고, 전역에 변수를 선언하면 전역 스코프를 갖는 전역 변수가 된다.
+- 전역 변수는 어디서든지 참조할 수 있다.
+- 지역은 지역 스코프를 만들고, 지역에 변수를 선언하면 지역 스코프를 갖는 지역 변수가 된다.
+- 지역 변수는 자신의 지역 스코프와 하위 지역 스코프에서만 유효하다.
+
+## 스코프 체인
+
+함수는 중첩될 수 있으므로 함수의 지역 스코프도 중첩될 수 있다. 이는 **스코프가 함수의 중첩에 의해 계층적 구조를 갖는다**는 것을 의미한다. 중첩 함수의 지역 스코프는 외부 함수의 지역 스코프와 계층적 구조를 갖는데, 이때 외부 함수의 지역 스코프를 중첩 함수의 상위 스코프라 한다.
+
+- 모든 스코프는 계층적 구조로 연결되며, 모든 지역 스코프의 최상위 스코프는 전역 스코프다.
+- 스코프가 계층적으로 연결된 것을 **스코프 체인**이라고 한다.
+- 변수를 참조할 때 JS 엔진은 스코프 체인을 통해 변수를 참조하는 코드의 스코프에서 시작하여 상위 스코프 방향을 이동하며 선언된 변수를 검색한다.
+  - 이를 통해 상위 스코프에서 선언한 변수를 하위 스코프에서도 참조할 수 있다.
+- 스코프 체인은 물리적인 실제로 존재한다. JS 엔진은 코드를 실행하기에 앞서 렉시컬 환경을 실제로 생성한다.
+- 변수 선언이 실행되면 변수 식별자가 이 자료구조(렉시컬 환경)에 키로 등록되고, 변수 할당이 일어나면 이 자료구조의 변수 식별자에 해당하는 값을 변경한다. 검색도 이 자료구조 상에서 이뤄진다.
+
+- 스코프 체인은 실행 컨텍스트의 렉시컬 환경을 단방향으로 연결한 것이다. 전역 렉시컬 환경은 코드가 로드되면 곧바로 생성되고 함수의 렉시컬 환경은 함수가 호출되면 곧바로 생성된다.
+
+### 스코프 체인에 의한 변수 검색
+
+- 스코프 체인을 따라 변수를 참조하는 코드의 스코프에서 시작해서 상위 스코프 방향으로 이동하며 선언된 변수를 검색한다.
+- 상위 스코프에서 유효한 변수는 하위 스코프에서 자유롭게 참조할 수 있지만 하위 스코프에서 유효한 변수를 상위 스코프에서 참조할 수 없다.
+
+### 스코프 체인에 의한 함수 검색
+
+- 함수도 식별자에 할당되기 때문에 스코프를 갖는다.
+- 식별자에 함수 객체가 할당된 것 외에는 일반 변수와 다를 바 없다.
+- 스코프를 "변수를 검색할 때 사용하는 규칙"이라고 표현하기보다는 "식별자를 검색하는 규칙"이라고 표현하는 편이 좀 더 적합하다.
+
+## 함수 레벨 스코프
+
+- 대부분의 프로그래밍 언어는 함수 몸체만이 아니라 모든 코드 블록(if, for, while)이 지역 스코프를 만든다.
+  -> **블록 레벨 스코프**
+- 하지만 var 키워드로 선언된 변수는 오로지 함수의 코드 블록만을 지역 스코프로 인정한다.
+  -> **함수 레벨 스코프**
+- ES6에서 도입한 let, const 키워드는 블록 레벨 스코프를 지원한다.
+
+## 렉시컬 스코프
+
+```javascript
+var x = 1;
+
+function foo() {
+  var x = 10;
+  bar();
+}
+
+function bar() {
+  console.log(x);
+}
+
+foo(); // ?
+bar(); // ?
+```
+
+위의 실행 결과는 bar 함수의 상위 스코프가 무엇인지에 따라 결정된다.
+
+1. 함수를 어디서 호출했는지에 따라 함수의 상위 스코프를 결정한다.
+2. 함수를 어디서 정의했는지에 따라 함수의 상위 스코프를 결정한다.
+
+- 첫 번째 방식을 동적 스코프라고 한다. 함수를 정의하는 시점에는 함수가 어디서 호출될지 알 수 없다. 함수가 호출되는 시점에 동적으로 상위 스코프를 결정해야 해서 동적 스코프라 부른다.
+- 두 번째 방식을 렉시컬 스코프 또는 정적 스코프라고 한다. 함수 정의가 평가되는 시점에 상위 스코프가 정적으로 결정되기 때문에 정적 스코프라 부른다.
+- 자바스크립트는 렉시컬 스코프를 따르므로 함수의 호출된 위치는 상위 스코프 결정에 어떠한 영향을 주지 않는다. 즉, 함수의 상위 스코프는 언제나 자신이 정의된 스코프다.
+- 함수가 호출될 때마다 함수의 상위 스코프를 참조할 필요가 있기 때문에 함수 정의가 실행되어 생성된 함수 객체는 이렇게 결정된 상위 스코프를 기억한다.
+
+### 출처
+
+모던 자바스크립트 Deep Dive
