--- a/_posts/2021-09-14-0913-0919.md
+++ b/_posts/2021-09-14-0913-0919.md
@@ -70,3 +70,72 @@ ajax 호출에서 객체를 바로 생성해서 보내는 이유
 
 predicate는 콜백 함수인대, true나 false를 반환하는 콜백함수이다.  
 자바스크립트는 싱글 스레드, 브라우저는 멀티 스레드이기 때문에 비동기 함수에서 기다렸다가 호출하는 일을 브라우저에게 위임한다.
+
+## 0914
+
+# 47일 차
+
+## 2교시
+
+다른 함수는 메인함수(진입점)이 존재하는 함수가 많다.  
+그러나 자바스크립트는 진입점이 존재하지 않는다.  
+자바스크립트 파일을 불러들이게 되면 로드하고 바로 실행한다.
+
+모듈은 파일을 구분했을 때 파일들이 스코프를 갖는다. (간단하게 얘기한 것)  
+export와 import 키워드 두개를 통해서 다른 스코프에 있는 데이터를 가지고 올 수 있다.
+
+테스트와 코드를 분리해서 만들어야 한다. 왜냐하면 테스트를 배포해서는 안되기 때문이다.
+
+jest에서 toBe는 ===, toEqual은 내용이 같아야 한다.
+
+## 3교시
+
+식별자는 유효한 범위가 있는데, 스코프라는 것이 사라지면 그 안에 있었던 식별자들도 같이 날라간다.  
+호이스팅이란 스코프의 최상단으로 끌어올려진 것처럼 보여지는 것
+
+스코프라는 것은 개념이 아니라 자료구조가 있다고 생각하는 것이 쉽다.  
+-> 렉시컬 환경
+
+모든 식별자는 자신이 선언된 위치에 의해 다른 코드가 식별자 자신을 참조할 수 있는 유효 범위가 결정된다.
+
+상속과 스코프는 유사한 개념. 둘 다 밑에서 위만 볼 수 있다.
+
+var는 함수 레벨 스코프, let과 const는 블록 레벨 스코프
+
+함수가 호출되면 객체가 하나 만들어진다.  
+함수안의 식별자들은 사실 실체안의 프로퍼티 키와 값으로 존재한다.
+
+어떻게 런타임 이전에 변수를 선언할까?  
+AST를 만들어서 선언문만 쫙 뽑아낸다.  
+함수 또한 선언문을 호이스팅하기 때문에 선언한다. 함수 객체를 텍스트로 정의한다 (껍데기만).  
+함수는 호출이 발생하기 전까지는 함수 몸체 내용은 쳐다도 안본다.
+
+식별자는 스코프 체인, 객체는 프로토타입 체인에 존재한다.  
+식별자를 찾는 행위, 프로토타입을 찾는 행위를 해당 존재하는 공간에서 찾는다.
+
+하위 스코프에서 식별자 이름이 같은 것을 먼저 찾아서 상위 스코프에 같은 이름을 가진 식별자가 무시당하는 것을 가리워졌다, 쉐도잉 등의 단어로 표현한다.  
+그리고 이렇게 하위 스코프에서 식별자를 사용하기로 한 것을 식별자 결정이라고 한다.
+
+전역 스코프는 스코프 체인의 종점
+
+## 4교시
+
+### 렉시컬 스코프 (정적 스코프)
+
+상위 스코프를 어떻게 결정할 것인지의 메커니즘  
+변수의 스코프는 선언문의 위치에 따라 결정된다.  
+함수의 정의된 스코프가 상위 스코프이다.
+
+반면 동적 스코프는 함수의 호출 위치가 상위 스코프를 결정한다.  
+대부분의 언어는 렉시컬 스코프이다.
+
+함수 객체(함수)는 객체와 다른점이 하나인대, 호출이 가능하다는 것이다.  
+`[[call]]` 내부 슬롯을 가지고 있다.  
+내부 슬롯이란 자바스크립트 엔진이 보기위한 프로퍼티이다. 그래서 사용자는 접근할 수 없다.
+
+함수 객체는 자신이 생성될 때 내부 슬롯 environment를 가진다. environment의 값이 상위 스코프에 대한 참조이다.  
+함수가 어디에 선언되는지에 상관없이 고정되는 이유.
+
+모듈을 쓰는 환경에서는 전역변수를 선언할 수 없다.
+
+책에 나와있는 모듈은 ESM이다.
