--- a/_posts/2021-09-14-0913-0919.md
+++ b/_posts/2021-09-14-0913-0919.md
@@ -139,3 +139,68 @@ AST를 만들어서 선언문만 쫙 뽑아낸다.
 모듈을 쓰는 환경에서는 전역변수를 선언할 수 없다.
 
 책에 나와있는 모듈은 ESM이다.
+
+## 0915
+
+# 48일 차
+
+## 1교시
+
+### 버전 정보
+
+1.7.3
+버전 정보를 명시하는데, 맨 앞의 1 Major은 breaking change가 발생한것. 이전 버전과 다르게 동작할 수 있다.  
+두 번째 7 Minor는 기능 변경. 성능 변경이 발생한 것  
+마지막 3은 기타 버그 패치  
+-> 마음대로 버전업을 하면 안된다.
+
+### package.json
+
+package.json에서 `^`은 npm install을 다시 하더라도 메이저 버전은 바꿔주지 않겠다는 뜻  
+설치할 때도 의존성인지 개발 의존성인지 확인을 잘 하고 깔아야한다.
+
+결국 package.json은 개발환경을 공유하기 위함
+
+## 2교시
+
+메서드를 어디에 집어넣을 것이냐?
+빌트인 객체들은 어떻게 메서드를 구성했는가에서 힌트를 찾을 수 있을 것이다.
+
+### for...in문과 Object.keys()
+
+객체 프로퍼티를 열거할 때에는 순서가 무의미하다.  
+in 연산자는 객체의 프로퍼티를 확인하기 위해 사용을 하는대, 상속받아서 사용할 수 있는 프로퍼티까지 다 열거한다.  
+`Object.keys()`는 상속받은 프로퍼티는 제외하고 열거한다.  
+for... in 문에서는 `const` 키워드를 사용해서 변수를 선언하는대, 그 이유는 for...in 문에서는 재할당을 하지 않고 돌 때마다 새로 선언하기 때문이다.
+
+`__proto__`는 왜 함수가 아니라 접근자 프로퍼티로 만들었을까?
+
+`Object.freeze`는 쓰일일이 있는데, 객체를 상수처럼 사용하고 싶을 때 쓰인다.
+
+react에서는 불변 객체인 것 처럼 객체를 사용하라고 하는데, 이 말은 원시값처럼 사용하라는 것이다. 복사해서 값을 바꿔치기
+
+## 4교시
+
+### 클래스의 문제점
+
+프론트엔드 개발자는 이벤트 처리를 해야 한다.  
+클래스를 사용하면 네임스페이스처럼 사용할 수 있다는 문제점이 있다.  
+클래스는 일반 객체를 만들기에는 좋지만, 내부에 많은 이벤트 로직을 포함하고 있으면 this가 꼬여서 문제가 발생할 수 있다.
+함수로 객체를 만들기 위해서는 클로저를 알아야 한다.
+
+### 메서드 공유
+
+프로퍼티는 생성자 함수가 생성한 객체마다 똑같을 수도 있지만 다르게 유지해야 한다.
+하지만 메서드는 굳이 똑같이 동작하는데 다르게 생성할 필요가 없다.
+그래서 프로토타입으로 공유하는 메서드를 올려서 상속받아 쓰면 이 문제를 해결할 수 있다.
+
+## 5교시
+
+함수가 일급 객체라는 뜻은 JS는 함수형 프로그래밍이다 라는 뜻
+
+화살표함수는 내부에 arguments를 가지고 있지 않다.  
+...으로 인수를 받아서 해결하면 된다.
+
+arguments는 유사배열인데, 배열이 가지고 있는 유용한 메서드들을 사용할 수 없다.
+
+모든 객체는 프로토타입 객체를 갖는다. 프로토타입 객체가 없으면 상속을 못받는다.
