--- a/_posts/2021-09-14-0913-0919.md
+++ b/_posts/2021-09-14-0913-0919.md
@@ -413,3 +413,58 @@ console.log(obj.constructor); // [Function: Object]
 ### 출처
 
 모던 자바스크립트 Deep Dive
+
+## 0917
+
+# 50일 차
+
+## 2교시
+
+프로토타입을 한마디로 이야기하자면 자바스크립트가 상속을 구현하는 매커니즘
+
+```javascript
+function Person(name) {
+  this.name = name;
+  this.sayHi = function () {};
+}
+```
+
+- 과연 반드시 생성자 함수 안에 메서드를 작성해야 하는가?
+- sayHi 메서드를 밖으로 빼서 함수로 작성해도 된다.
+- 이것을 결정하는 것이 실력
+- 되든 안되든 좋든 안좋든 자기 철학이 들어있어야 한다.
+
+### 상속의 단점
+
+부모의 프로퍼티를 사용하는 경우, 프로퍼티가 제대로 있다는 전제하에 인스터스의 코드가 동작한다.
+즉, 부모와 강하게 연결되어 있다. **Tight Coupling**  
+또한 사용하려면 인스턴스가 있어야 한다는 전제가 존재한다.  
+그리고 메서드가 어떤 객체에 속한 메서드인지 알 수 없다.
+
+## 3교시
+
+`Object.hasOwn()`
+
+- 흩어져 있으면 사용하기가 힘들다. 네임스페이스의 개념으로 정적 메서드들을 모아둬서 사용 가능
+- 모듈에 함수를 작성하고 객체로 export하면 네임스페이스처럼 사용이 가능하다.
+
+함수 객체는 프로토타입이라는 프로퍼티를 갖는다.
+모든 객체는 `[[prototype]]` 내부 슬롯을 갖는다.
+객체를 생성할 때 인스턴스의 `[[prototype]]` 값에 자신을 new한 생성자.prototype 값을 할당해준다.
+
+## 4교시
+
+`__proto__`처럼 사용하는 것은 쓰지말라는 컨벤션.
+get 함수를 만든다면 set 함수도 만들어야 하는 것이 아닌가 고민해봐야 한다.
+
+정적 메서드로도 해결이 가능하고 프로토타입 메서드로도 해결이 가능하다면 정적 메서드로 작성하는 것이 좋다.
+
+## 5교시
+
+for ...in문보다는 `Object.keys()나 Object.entries()`를 쓰는게 좋다.  
+-> 상속을 고려하지 않아도 되기 때문에
+
+인스턴스에서 Object 프로토타입 메서드를 사용하려는 경우, 혹시라도 인스턴스의 프로토타입이 null 일수도 있기 때문에 call 함수를 활용해서 호출하여 해결할 수 있다.  
+새로 나오는 메서드는 정적 메서드로 만들려고 하는 경향이 있다.
+
+배열을 얼마만큼 잘 순회하는가? -> 매우 중요한 코딩 스킬
