--- a/_posts/2021-09-28-0927-1003.md
+++ b/_posts/2021-09-28-0927-1003.md
@@ -217,3 +217,78 @@ function solution(nums, k) {
 - 위의 문제와 비슷한 방법으로 우선 rt에서는 0일 때 바꾼 횟수를 증가시키고, lt에서는 cnt가 필요 이상 증가하면 줄여준다.
 - 그리고 rt와 lt를 이용해 정답을 도출한다.
 - **연속부분수열** 관련 문제에서는 투포인터 알고리즘을 가장 먼저 떠올려야겠다.
+
+## 0930
+
+# 59일 차
+
+## 위클리 문제 1번
+
+```javascript
+function solution(nums, k) {
+  let answer = 0;
+  let sum = 0;
+  let nH = new Map();
+
+  for (let i = 0; i < nums.length; i++) {
+    if (nums[i] % 2 === 1) sum++;
+    if (sum === k) answer++;
+
+    if (nH.has(sum - k)) answer += nH.get(sum - k);
+
+    nH.set(sum, nH.get(sum) + 1 || 1);
+  }
+
+  return answer;
+}
+
+console.log(solution([1, 2, 1, 1, 2], 2));
+console.log(solution([2, 2, 2, 1, 2, 2, 1, 2, 2, 2], 2));
+console.log(solution([2, 4, 6], 1));
+```
+
+- 연속 부분수열 문제
+- 투포인터 알고리즘을 떠올리고 문제를 해결해보려고 했으나 생각처럼 잘 되지 않는 부분이 있었다.
+- 어디까지의 연속 부분 수열 내에서 특정 값이 되는 경우에는 이런 방식을 적용해서 문제를 해결해야겠다.
+
+## 위클리 문제 2번
+
+```javascript
+function solution(s, e) {
+  let answer = 0;
+
+  function BFS() {
+    const queue = new Set();
+    queue.add(s);
+
+    let L = 0;
+    while (queue.size) {
+      e += L + 1;
+      L++;
+      if (queue.has(e)) return L;
+
+      for (let v of [...queue]) {
+        for (let nx of [v + 1, v - 1, v * 2]) {
+          if (nx === e) {
+            return nx > 500000 ? -1 : L;
+          }
+
+          if (nx <= 500000 && nx > 0) {
+            queue.add(nx);
+          }
+        }
+      }
+    }
+    return -1;
+  }
+  answer = BFS();
+
+  return answer;
+}
+console.log(solution(5, 6));
+console.log(solution(10, 3));
+console.log(solution(1, 11));
+```
+
+- 시험을 볼 때 테스트케이스를 모두 통과했지만 풀이가 완벽하지는 않았다는 사실을 깨달았다.
+- bfs에서 체크 배열을 사용하지 않으면서 중복을 피하고 싶은 경우 set을 활용해 문제를 해결할 수 있다.
