--- a/_posts/2021-09-28-0927-1003.md
+++ b/_posts/2021-09-28-0927-1003.md
@@ -292,3 +292,72 @@ console.log(solution(1, 11));
 
 - 시험을 볼 때 테스트케이스를 모두 통과했지만 풀이가 완벽하지는 않았다는 사실을 깨달았다.
 - bfs에서 체크 배열을 사용하지 않으면서 중복을 피하고 싶은 경우 set을 활용해 문제를 해결할 수 있다.
+
+## 1001
+
+# 60일 차
+
+## 1교시
+
+코드에 대한 이해가 없으면 디버깅을 할 때 브레이크 포인트를 잡기도 힘들다.
+
+## 2교시
+
+forEach에서 리턴하는 행위는 아무런 의미가 없다.  
+-> continue도 안하고 break도 안하는 경우에 사용
+
+map은 호출한 배열와 length가 같다. 그 말은 길이가 같은 경우 map을 사용하면 대부분 해결이 된다.  
+filter는 호출한 배열의 length 보다 같거나 작다.  
+reduce의 결과는 하나가 된다.
+
+스프레드 문법은 뒤에 이터러블이 와야 한다.  
+이터러블의 종류로는 배열, string, map, set 등이 있다.
+
+slice()를 사용한 복사와 스프레드 문법을 사용한 복사 중에서는 후자가 좋다.  
+스프레드 문법은 표현식이기 때문에 오류가 발생할 확률이 줄어들고 사용이 간편한다.
+
+객체 안에서 스프레드 문법으로 객체를 풀면 복사와 같은 효과를 낸다. -> best practice
+
+## 4교시
+
+forEach는 보통 외부의 것을 mutate하기 때문에 안 쓰는 것이 좋다.  
+-> map 사용
+
+사용 순위  
+map, filter -> reduce -> forEach  
+reduce는 map이랑 filter에 비해 가독성이 떨어진다.
+
+### 꿀팁
+
+- map이나 filter를 사용할 때 첫 번째 인자로 요소를 받아올 때, 디스트럭처링 할당을 사용하면 더 가독성 있게 코드 작성이 가능하다.
+- 템플릿 리터럴에 Html을 작성하는 경우 코드 상에서 가독성만 고려하면 된다.  
+  -> 어차피 이동하면 같아지기 때문에 개발 상에서 가독성만 고려
+- `sort()` 사용 시 원본 배열을 변경하기 때문에 이 점을 고려해서 스프레드 문법으로 배열을 복사하여 반환해야 한다.
+  - 또한 문자일 때와 숫자일 때 모두를 고려하여 비교 연산자를 사용해 비교해서 1이나 -1을 반환해준다.
+  - 이 때, 값이 같은 경우는 바뀌지 않도록 처리해준다.
+- 객체에서 프로퍼티를 변환해서 반환해줘야 하는 경우, 새로운 객체 리터럴에 디스트럭처링 할당을 사용하고 바꿔야하는 프로퍼티를 변경해서 반환해주면 코드가 줄어든다.
+
+## 프로그래머스 카카오 Level1 - 실패율
+
+```javascript
+function solution(N, stages) {
+  const answer = [];
+  const nh = new Map();
+  let total = stages.length;
+
+  for (let x of stages) {
+    nh.set(x, (nh.get(x) || 0) + 1);
+  }
+
+  for (let i = 1; i <= N; i++) {
+    let fail = (nh.get(i) || 0) / total;
+    answer.push([fail, i]);
+    total -= nh.get(i) || 0;
+  }
+
+  return answer.sort((a, b) => b[0] - a[0]).map((v) => v[1]);
+}
+
+console.log(solution(5, [2, 1, 2, 6, 2, 4, 3, 3]));
+console.log(solution(4, [4, 4, 4, 4, 4]));
+```
