--- a/_posts/2021-09-28-0927-1003.md
+++ b/_posts/2021-09-28-0927-1003.md
@@ -361,3 +361,138 @@ function solution(N, stages) {
 console.log(solution(5, [2, 1, 2, 6, 2, 4, 3, 3]));
 console.log(solution(4, [4, 4, 4, 4, 4]));
 ```
+
+## 1002
+
+# 34장 이터러블
+
+## 이터레이션 프로토콜
+
+이터레이션 프로토콜은 순회 가능한 데이터 컬렉션을 만들기 위해 ECMAScript 사양에 정의하여 미리 약속한 규칙이다.
+
+ES6에서는 순회 가능한 데이터 컬렉션을 이터레이션 프로토콜을 준수하는 이터러블로 통일하여 for ...of문, 스프레드 문법, 배열 디스트럭처링 할당의 대상으로 사용할 수 있도록 일원화했다.
+
+- 이터러블 프로토콜
+  -     Well-known Symbol인 Symbol.iterator를 프로퍼티 키로 사용한 메서드를 직접 구현하거나 프로토타입 체인을 통해 상속 받은 Symbol.iterator 메서드를 호출하면 이터레이터 프로토콜을 준수한 이터레이터를 반환한다.
+  - 이터러블 프로토콜을 준수한 객체를 **이터러블**이라 한다.
+- 이터레이터 프로토콜
+  - 이터레이터는 next 메서드를 소유하며 next 메서드를 호출하면 이터러블을 순회하며 value와 done 프로퍼티를 갖는 이터레이터 리절트 객체를 반환한다.
+  - 이터레이터 프로토콜을 준수한 객체를 이터레이터라 한다.
+  - 이터레이터는 이터러블의 요소를 탐색하기 위한 포인터 역할을 한다.
+
+### 이터러블
+
+- Symbol.iterator를 프로퍼티 키로 사용한 메서드를 직접 구현하거나 프로토타입 체인을 통해 상속받은 객체
+- for ...of 문으로 순회할 수 있으며, 스프레드 문법과 배열 디스트럭처링 할당의 대상으로 사용할 수 있다.
+- 일반 객체는 이터러블 프로토콜을 준수한 이터러블이 아니다.
+- 일반 객체는 for ...of 문과 배열 디스트럭처링 할당의 대상으로 사용할 수 없지만, 스프레드 프로퍼티 제안은 일반 객체에 스프레드 문법을 허용한다.
+
+```javascript
+const obj = { a: 1, b: 2 };
+
+console.log({ c: 3, ...obj });
+// { c: 3, a: 1, b: 2 }
+```
+
+**이터러블인지 확인하는 함수**
+
+```javascript
+const isIterable = (v) =>
+  v !== null && typeof v[Symbol.iterator] === "function";
+```
+
+### 이터레이터
+
+- 이터러블의 Symbol.iterator 메서드를 호출하면 이터레이터 프로토콜을 준수한 이터레이터를 반환한다. 이터레이터는 next 메서드를 갖는다.
+- next 메서드가 반환하는 이터레이터 리절트 객체의 value 프로퍼티는 현재 순회 중인 이터러블의 값을 나타내며 done 프로퍼티는 이터러블의 순회 완료 여부를 나타낸다.
+
+## 빌트인 이터러블
+
+JS는 이터레이션 프로토콜을 준수한 객체인 빌트인 이터러블을 제공한다.
+
+- Array
+- String
+- Map
+- Set
+- TypeArray
+- arguments
+- DOM 컬렉션
+  - NodeList.prototype
+  - HTMLCollection.prototype
+
+## for ... of 문
+
+순회하면서 이터러블의 요소를 변수에 할당한다.  
+`for (변수선언문 of 이터러블) { ... }`
+
+- 내부적으로 이터레이터의 next 메서드를 호출하여 이터러블을 순회하며 리절트 객체의 value 프로퍼티 값을 for ... of 문의 변수에 할당한다.
+- done 프로퍼티 값이 false이면 순회를 계속하고 true이면 순회를 중단한다.
+
+## 이터러블과 유사 배열 객체
+
+- 유사 배열 객체는 마치 배열처럼 인덱스로 프로퍼티 값에 접근할 수 있고 length 프로퍼티를 갖는 객체를 말한다.
+- length 프로퍼티를 갖기 때문에 for 문으로 순회할수 있고, 인덱스로 프로퍼티 값에 접근할 수 있다.
+- 유사 배열 객체는 Symbol.lterator 메서드가 없기 때문에 이터러블이 아니라 일반 객체다.
+- 단, arguments, NodeList, HTMLCollection은 유사 배열 객체이면서 이터러블이다.
+
+## 이터레이션 프로토콜의 필요성
+
+- ES6 이전의 순회 가능한 데이터 컬렉션 등은 통일된 규약 없이 각자 나름의 구조를 가지고 다양한 방법으로 순회할 수 있었다.
+- ES6에서는 순회 가능한 데이터 컬렉션을 이터레이션 프로토콜을 준수하는 이터러블로 통일하여 for ... of 문, 스프레드 문법, 배열 디스트럭처링 할당의 대상으로 사용할 수 있도록 일원화하였다.
+- 이터러블은 이러한 데이터 소비자(ex - for ... of문)에 의해 사용되므로 데이터 공급자의 역할을 한다고 할 수 있다.
+- 데이터 공급자가 이터레이션 프로토콜을 준수하도록 규정하면 데이터 소비자는 이터레이션 프로토콜만 지원하도록 구현하면 된다.
+  -> 이터레이션 프로토콜은 다양한 데이터 공급자가 하나의 순회 방식을 갖도록 규정하여 데이터 소비자가 효율적으로 다양한 데이터 공급자를 사용할 수 있도록 데이터 소비자와 데이터 공급자를 연결하는 인터페이스의 역할을 한다.
+
+## 사용자 정의 이터러블
+
+이터레이션 프로토콜을 준수하지 않는 일반 객체도 이터레이션 프로토콜을 준수하도록 구현하면 사용자 정의 이터러블이 된다.
+
+```javascript
+// 피보나치 수열을 구현한 사용자 정의 이터러블
+const fibonacci = {
+  // Symbol.iterator 메서드를 구현하여 이터러블 프로토콜을 준수한다.
+  [Symbol.iterator]() {
+    let [pre, cur] = [0, 1];
+    const max = 10; // 수열의 최대값
+    // Symbol.iterator 메서드는 next 메서드를 소유한 이터레이터를 반환해야 하고
+    // next 메서드는 이터레이터 리절트 객체를 반환해야 한다.
+    return {
+      next() {
+        [pre, cur] = [cur, pre + cur];
+        // 이터레이터 리절트 객체를 반환한다.
+        return { value: cur, done: cur >= max };
+      },
+    };
+  },
+};
+// 이터러블인 fibonacci 객체를 순회할 때마다 next 메서드가 호출된다.
+for (const num of fibonacci) {
+  console.log(num); // 1 2 3 5 8
+}
+```
+
+- 사용자 정의 이터러블은 이터레이션 프로토콜을 준수하도록 Symbol.iterator 메서드를 구현하고 next 메서드를 갖는 이터레이터를 반환하도록 한다.
+- 이터레이터의 next 메서드는 이터레이터 리절트 객체를 반환한다.
+- 이터러블이면서 이터레이터인 객체를 생성하면 Symbol.iterator 메서드를 호출하지 않아도 된다.
+
+```javascript
+const fibonacci = function (max) {
+  let [pre, cur] = [0, 1];
+
+  return {
+    [Symbol.iterator]() {
+      return this;
+    },
+    next() {
+      [pre, cur] = [cur, pre + cur];
+      return { value: cur, done: cur >= max };
+    },
+  };
+};
+```
+
+- done 프로퍼티를 생략하면 무한 이터러블을 생성하는 함수를 구현할 수 있다.
+- 무한 이터러블은 지연 평가를 통해 데이터를 생성한다.
+- 지연 평가는 데이터가 필요한 시점 이전까지는 미리 데이터를 생성하지 않다가 데이터가 필요한 시점이 되면 그때야 비로소 데이터를 생성하는 기법이다.
+  - 예를 들어 for ... of 문의 경우 이터러블을 순회할 때 이터레이터의 next 메서드를 호출하는데 이때 데이터가 생성된다.
+- 지연 평가를 사용하면 불필요한 데이터를 미리 생성하지 않고 필요한 데이터를 필요한 순간에 생성하므로 빠른 실행 속도를 기대할 수 있고 불필요한 메모리를 소비하지 않는다는 장점이 있다.
